--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,21 @@
 // Helpers
+@import './Helpers/variables';
+@import './Helpers/mixin';
 // Vendors
 // Base
+@import './Base/reset';
+@import './Base/customize';
 // Layouts
+@import './Layouts/footer';
+@import './Layouts/customers';
+@import './Layouts/services';
+@import './Layouts/proffesional';
+@import './Layouts/contact';
+@import './Layouts/provides';
+@import './Layouts/carousel';
+@import './Layouts/header';
 // Components
+@import './Components/button';
 // Pages
+@import './Pages/home';
 // Themes
