--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -5,6 +5,7 @@ $color-black-2: rgba(0, 0, 0, 0.37);
 $color-black-3: #2c363e;
 $color-black-4: #5e5e5e;
 $color-black-5: #151515;
+$color-black-6: #0b0c11;
 
 $color-white-0: white;
 $color-white-1: #fdfdfd;
@@ -12,6 +13,7 @@ $color-white-2: #e8e8e8;
 
 $color-gray-0: #868c94;
 $color-gray-1: #777;
+$color-gray-2: #bfbfbf;
 
 $color-purple-0: #7f67f8;
 
@@ -37,6 +39,7 @@ $fw-4: 500;
 $mg-0: 15px;
 $mg-1: 20px;
 $mg-2: 40px;
+$mg-3: 5px;
 
 // PADDING
 $pd-0: 10px;
