--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,31 @@ a {
 @media screen and (min-width: 1400px) {
   .container {
     max-width: 1140px; } }
+footer {
+  background: #0b0c11;
+  color: white; }
+  footer .footer__form {
+    padding-right: 5em; }
+    footer .footer__form h4 {
+      color: #f97c69;
+      font-size: 1.7em;
+      margin-bottom: 1.5em;
+      letter-spacing: 2px; }
+    footer .footer__form p {
+      color: #bfbfbf;
+      font-size: 1em;
+      line-height: 2em;
+      margin-bottom: 2em;
+      letter-spacing: 1px; }
+
+.customers .owl-theme .owl-dots .owl-dot.active span {
+  opacity: 1; }
+.customers .owl-theme .owl-dots .owl-dot span {
+  width: 12px;
+  height: 12px;
+  margin: 5px 7px;
+  background: #f97c69;
+  opacity: 0.5; }
 .customers .customers__feedback .customers__item {
   text-align: center;
   padding: 40px 10px;
