--- a/sass/Helpers/_variables.scss
+++ b/sass/Helpers/_variables.scss
@@ -6,10 +6,13 @@ $color-black-3: #2c363e;
 $color-black-4: #5e5e5e;
 $color-black-5: #151515;
 $color-black-6: #0b0c11;
+$color-black-7: rgba(0, 0, 0, 0.22);
+$color-black-8: #252525;
 
 $color-white-0: white;
 $color-white-1: #fdfdfd;
 $color-white-2: #e8e8e8;
+$color-white-3: #e9ecef;
 
 $color-gray-0: #868c94;
 $color-gray-1: #777;
@@ -40,6 +43,7 @@ $mg-0: 15px;
 $mg-1: 20px;
 $mg-2: 40px;
 $mg-3: 5px;
+$mg-4: 10px;
 
 // PADDING
 $pd-0: 10px;
