--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 @import './Base/reset';
 @import './Base/customize';
 // Layouts
+@import './Layouts/modal';
+@import './Layouts/backtotop';
 @import './Layouts/footer';
 @import './Layouts/customers';
 @import './Layouts/services';
