--- a/sass/Layouts/_carousel.scss
+++ b/sass/Layouts/_carousel.scss
@@ -56,3 +56,78 @@
         }
     }
 }
+@media screen and (max-width:1080px) {
+    .mergedCarousel{
+        #merged__carousel{
+            .carousel-inner{
+                .carousel-item{
+                    .carousel__caption{
+                        h5{
+                            font-size: 2.5em;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and(max-width:991.98px) {
+    .mergedCarousel{
+        #merged__carousel{
+            .carousel-inner{
+                .carousel-item{
+                    .carousel__caption{
+                        h5{
+                            font-size: 2.3em;
+                            letter-spacing: .1em;
+                        }
+                        p{
+                            font-size: $fs-3;
+                            width: 70%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and(max-width:768px) {
+    .mergedCarousel{
+        #merged__carousel{
+            .carousel-inner{
+                .carousel-item{
+                    .carousel__caption{
+                        h5{
+                            font-size: 1.6em;
+                            letter-spacing: .1em;
+                        }
+                        p{
+                            font-size: $fs-3;
+                            width: 50%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and(max-width:576px) {
+    .mergedCarousel{
+        #merged__carousel{
+            .carousel-inner{
+                .carousel-item{
+                    .carousel__caption{
+                        h5{
+                            font-size: 1em;
+                            letter-spacing: .1em;
+                        }
+                        p{
+                            font-size: $fs-3 - 3;
+                            width: 25%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
