--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -35,6 +35,18 @@ header{
         }
     }
     .header__main{
+        .navbar-toggler{
+            border-color: $color-purple-0;
+            background-color: $color-purple-0;
+            padding: $pd-2 - 2 $pd-2 + 2;
+            margin-top: $mg-3;
+            margin-right: 0;
+            border-radius: 6px;
+            outline: none;
+            &:focus{
+                box-shadow: none;
+            }
+        }
         padding: $pd-3 0;
         .navbar-brand{
             @include stytext1($color-purple-0,$fs-1,$fw-2);
@@ -61,9 +73,46 @@ header{
                         &:hover{
                             color: $color-purple-0;
                         }
+                        &.nav-home{
+                            color: $color-purple-0;
+                        }
                     }
                 }
             }
         }
+    }
+    @media screen and (max-width: 991.98px) {
+        .header__main{
+            .container{
+                position: relative;
+            }
+            #merged__navbar{
+                position: absolute;
+                width: 95%;
+                top: 62px;
+                z-index: 3;
+                background-color: black;
+                .navbar-nav{
+                    text-align: center;
+                    padding: 1em 0;
+                    .nav-item{
+                        margin: $mg-4 0;
+                        .nav-link{
+                            color: $color-white-0;
+                        }
+                    }
+                }
+                .dropdown-menu{
+                    background-color: $color-black-5;
+                    .dropdown-item{
+                        color: $color-white-0;
+                        text-align: center;
+                        &:hover{
+                            background-color: $color-white-3;
+                        }
+                    }
+                }
+            }
+        } 
     }
 }
