--- a/sass/Layouts/_backtotop.scss
+++ b/sass/Layouts/_backtotop.scss
@@ -3,6 +3,7 @@
     right: 50px;
     bottom: 50px;
     a{
+       
         i{
             @include stytext3($color-orange-0,1.2rem);
             width: 30px;
@@ -11,6 +12,18 @@
             text-align: center;
             line-height: 26px;
             border-radius: 50%;
+        }
+    }
+    
+    .js-cd-top{
+        opacity: 0;
+        &.cd-top--is-visible { // back-to-top button visible
+            visibility: visible;
+            opacity: 1;
+          }
+          
+        &.cd-top--fade-out { // reduce button opacity if user keeps scrolling
+            opacity: 1;
         }
     }
 }
